--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,9 @@ services:
     ports:
          - "27017:27017"
     volumes:
-            - "/home/data/mongo:/data/db"
-    command: mongod --auth mongo --eval db.createUser({ user: 'hasher', pwd: 'password', roles: [ { role: "readWrite", db: "hashes" } ] });
+         - "/home/data/mongo:/data/db"
+    command: >
+         mongod --auth mongo --eval db.createUser({ user: 'hasher', pwd: 'password', roles: [ { role: "readWrite", db: "hashes" } ] });
   elastic:
     container_name: trace_elastic
     image: "docker.elastic.co/elasticsearch/elasticsearch:5.3.0"
