--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,9 +56,7 @@ services:
   minio_server:
     container_name: trace_minio
     image: "minio/minio"
-    environment:
-         - ${MINIO_SECRET_KEY}
-         - ${MINIO_ACCESS_KEY}
+    env_file: variables.env
     volumes:
          - "/home/data/minio/data:/data"
          - "/home/data/minio/config:/root/.minio"
