--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     volumes:
          - "/home/data/mongo:/data/db"
     command: >
-         mongod --auth mongo --eval db.createUser({ user: 'hasher', pwd: 'password', roles: [ { role: "readWrite", db: "hashes" } ] });
+         mongo --auth mongo --eval db.createUser({ user: 'hasher', pwd: 'password', roles: [ { role: "readWrite", db: "hashes" } ] });
   elastic:
     container_name: trace_elastic
     image: "docker.elastic.co/elasticsearch/elasticsearch:5.3.0"
@@ -57,6 +57,8 @@ services:
     container_name: trace_minio
     image: "minio/minio"
     env_file: variables.env
+    ports:
+         - "9000:9000"
     volumes:
          - "/home/data/minio/data:/data"
          - "/home/data/minio/config:/root/.minio"
