--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
          && mongo --eval db.createUser({ user: 'hasher', pwd: 'password', roles: [ { role: "readWrite", db: "hashes" } ] });
   elastic:
     container_name: trace_elastic
-    image: "docker.elastic.co/elasticsearch/elasticsearch:5.3.0"
+    image: "elasticsearch"
     ports:
          - "9200:9200"
     environment:
