--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
          - http.host=0.0.0.0
     volumes:
          - "/home/rocco/data/elastic:/usr/share/elasticsearch/data"
-    entrypoint: es-plugins.sh
+    command: ./es-plugins.sh
   nats_server:
     container_name: trace_nats
     image: "nats"
