--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,12 +38,12 @@ services:
         mongod --auth
   elastic:
     container_name: trace_elastic
-    image: "elasticsearch"
+    image: "docker.elastic.co/elasticsearch/elasticsearch:5.3.0"
     restart: always
     ports:
          - "9200:9200"
     environment:
-         - "ES_JAVA_OPTS=-Xms512m -Xms512m"
+         - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
          - xpack.security.enabled=false
          - http.cors.enabled=true
          - http.cors.allow-origin="*"
