--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         mongod --auth
   elastic:
     container_name: trace_elastic
-    image: "docker.elastic.co/elasticsearch/elasticsearch:5.3.0"
+    build: elastic/
     restart: always
     ports:
          - "9200:9200"
@@ -52,8 +52,6 @@ services:
     volumes:
          - "./elastic:/data/elastic"
          - "/home/rocco/data/elastic:/usr/share/elasticsearch/data"
-    entrypoint: bash -c "chmod 755 /data/elastic/es-plugins.sh
-                 && /data/elastic/es-plugins.sh"
   nats_server:
     container_name: trace_nats
     image: "nats"
