app code structure changed

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -4,7 +4,7 @@ FROM mongo:latest
 CMD ["--auth"]
 EXPOSE 27017
 RUN echo "Creating mongo users..."
-RUN mongo admin --host localhost -u admin -p password --eval "db.createUser({"user": "hasher","pwd": "password","roles": ["readWrite"]});"
+RUN mongo admin -u admin -p password --eval "db.createUser({"user": "hasher","pwd": "password","roles": ["readWrite"]});"
 RUN echo "Mongo users created."
 # Add your elasticsearch plugins setup here
 # Example: RUN edocklasticsearch-plugin install analysis-icu
