--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     environment:
         - MONGO_INITDB_ROOT_USERNAME=admin
         - MONGO_INITDB_ROOT_PASSWORD=password
-    command:
-           bash -c "chmod 755 /docker-entrypoint-initdb.d/addusers.sh \
+    command: bash -c "echo "Creating mongo users..." \
+           && chmod 755 /docker-entrypoint-initdb.d/addusers.sh \
            && /docker-entrypoint-initdb.d/addusers.sh"
   elastic:
     container_name: trace_elastic
