app code structure changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,14 @@ services:
     ports:
          - "27017:27017"
     volumes:
-         - "./mongo/:/docker-entrypoint-initdb.d/"
+         - "./mongo/:/starter/"
          - "/home/rocco/data/mongo:/data/db"
     environment:
         - MONGO_INITDB_ROOT_USERNAME=admin
         - MONGO_INITDB_ROOT_PASSWORD=password
-
+    command: bash -c "echo "Creating mongo users..." \
+           && chmod 755 /starter/addusers.sh \
+           && /starter/addusers.sh"
   elastic:
     container_name: trace_elastic
     build: elastic/
