app code structure changed

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,14 +1,9 @@
-FROM ubuntu:16.04
-MAINTAINER TonyWang <plantpark.net@gmail.com>
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv EA312927
-RUN echo "deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-3.2.list
-RUN apt-get update && apt-get install -y mongodb-org
-RUN mkdir -p /data/db
+FROM mongo:latest
 
-ADD addusers.sh /addusers.sh
+MAINTAINER <vlad>
 
-EXPOSE 27017 28017
-CMD ["mongod", "--auth"]
-CMD ["/set_mongodb_password.sh"]
-ENTRYPOINT usr/bin/mongod
-
+ADD mongo/create_users.js /tmp/
+RUN echo "Creating mongo users..."
+RUN mongod --fork --auth --logpath /var/log/mongodb.log \
+    && sleep 5 \
+    && mongo <YOUR DATABASE> /tmp/create_ddbb.js
