--- a/mongo/mongod.conf
+++ b/mongo/mongod.conf
@@ -1,2 +1,16 @@
+processManagement:
+   fork: true
 security:
   authorization: "enabled"
+systemLog:
+   destination: file
+   path: "/var/log/mongodb/mongod.log"
+   logAppend: true
+storage:
+   dbPath: /data/db
+storage:
+   journal:
+      enabled: true
+net:
+   bindIp: 127.0.0.1
+   port: 27017
