--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -2,8 +2,8 @@ FROM mongo:latest
 
 MAINTAINER <vlad>
 
+ADD mongod.conf /etc/mongod.conf
 ADD create_users.js /tmp/
-RUN echo "Creating mongo users..."
-RUN mongod --fork --auth --logpath /var/log/mongodb.log \
-    && sleep 5 \
-    && mongo <YOUR DATABASE> /tmp/create_ddbb.js
+RUN echo "Creating mongo users...."
+RUN sleep 5 \
+    && mongo hashes /tmp/create_ddbb.js
