moving betveen checkouts

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER <vlad>
 
 ADD mongod.conf /etc/mongod.conf
 ADD create_users.js /tmp/
-RUN echo "Creating mongo users...."
-RUN sleep 5 \
+RUN echo "Creating mongo users..."
+RUN mongod \
+    && sleep 5 \
     && mongo hashes /tmp/create_ddbb.js
