moving betveen checkouts

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -5,6 +5,6 @@ MAINTAINER <vlad>
 ADD mongod.conf /etc/mongod.conf
 ADD create_users.js /tmp/
 RUN echo "Creating mongo users..."
-RUN mongod \
+RUN mongod --fork \
     && sleep 5 \
     && mongo hashes /tmp/create_ddbb.js
