--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
         - "4222:4222"
         - "6222:6222"
         - "8222:8222"
-  conusl:
+  consul:
     container_name: trace_consul
     image: "consul"
     ports:
