--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,35 +6,50 @@ services:
     image: "mysql:latest"
     restart: always
     ports:
-         - "3306:3306"
+        - "3306:3306"
     environment:
-         - "MYSQL_ROOT_PASSWORD=password"
+        - "MYSQL_ROOT_PASSWORD=password"
     volumes:
-         - "/home/rocco/data/mysql:/var/lib/mysql"
+        - "/home/rocco/data/mysql:/var/lib/mysql"
   myadmin:
     container_name: trace_myadmin
     image: "phpmyadmin/phpmyadmin:latest"
     environment:
-          - PMA_HOST=mysql_db
-          - PMA_PORT=3306
+        - PMA_HOST=mysql_db
+        - PMA_PORT=3306
     links:
-          - mysql_db
+        - mysql_db
     depends_on:
-          - mysql_db
+        - mysql_db
     ports:
-         - "8080:80"
+        - "8080:80"
   mongodb:
     container_name: trace_mongo
     build: mongo/
     restart: always
     ports:
-         - "27017:27017"
+        - "27017:27017"
     volumes:
-         - "./mongo/:/starter/"
-         - "/home/rocco/data/mongo:/data/db"
+        - "./mongo/:/starter/"
+        - "/home/rocco/data/mongo:/data/db"
     environment:
         - MONGO_INITDB_ROOT_USERNAME=admin
         - MONGO_INITDB_ROOT_PASSWORD=password
+  postgres:
+    container_name: trace_pgsql
+    image: postgres
+    restart: always
+    ports:
+        - "5432:5432"
+    volumes:
+        - "/home/rocco/data/postgres:/var/lib/postgresql/data"
+    environment:
+        - POSTGRES_PASSWORD=password
+  adminer:
+      image: adminer
+      restart: always
+      ports:
+        - 8080:8080
   elastic:
     container_name: trace_elastic
     build: elastic/
@@ -42,16 +57,16 @@ services:
     ports:
          - "9200:9200"
     environment:
-         - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-         - vm.max_map_count=262144
-         - xpack.security.enabled=false
-         - http.cors.enabled=true
-         - http.cors.allow-origin="*"
-         - transport.host=127.0.0.1
-         - http.host=0.0.0.0
+        - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+        - vm.max_map_count=262144
+        - xpack.security.enabled=false
+        - http.cors.enabled=true
+        - http.cors.allow-origin="*"
+        - transport.host=127.0.0.1
+        - http.host=0.0.0.0
     volumes:
-         - "./elastic:/data/elastic"
-         - "/home/rocco/data/elastic:/usr/share/elasticsearch/data"
+        - "./elastic:/data/elastic"
+        - "/home/rocco/data/elastic:/usr/share/elasticsearch/data"
   nats_server:
     container_name: trace_nats
     image: "nats"
@@ -71,8 +86,8 @@ services:
     image: "minio/minio"
     env_file: variables.env
     ports:
-         - "9000:9000"
+        - "9000:9000"
     volumes:
-         - "/home/rocco/data/minio/data:/data"
-         - "/home/rocco/data/minio/config:/root/.minio"
+        - "/home/rocco/data/minio/data:/data"
+        - "/home/rocco/data/minio/config:/root/.minio"
     command: server /data
