--- a/trace.d/conf_dist.yaml
+++ b/trace.d/conf_dist.yaml
@@ -1,5 +1,4 @@
 listen: '8888'
-mysql: ''
 assets: 'static/'
 imgpath: '/static/images/'
 cpuprofile: './static/cpu.out'
@@ -8,3 +7,10 @@ elastic-url: ''
 elastic-log: ''
 elastic-pass: ''
 mongo: ''
+minio-k: ''
+minio-s: ''
+minio-url: ''
+pg-user: ''
+pg-pass: ''
+pg-host: ''
+consul: ''
